feat: csv/tsv exports
